resolve some errors and add command archivée with (active = false)